--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -62,6 +62,9 @@ jobs:
       - name: Create build directory
         run: mkdir build
 
+      - name: Setup rust toolchain for concrete-cpu
+        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
+
       - name: Build bindings
         uses: addnab/docker-run-action@v3
         if: ${{ !contains(inputs.instance_type, 'p3') }}
@@ -78,6 +81,7 @@ jobs:
             -e SSH_AUTH_SOCK=/ssh.socket
           shell: bash
           run: |
+            rustup toolchain install nightly-2024-01-31
             set -e
             rm -rf /build/*
 
