--- a/.github/workflows/compiler_build_and_test_cpu.yml
+++ b/.github/workflows/compiler_build_and_test_cpu.yml
@@ -63,6 +63,9 @@ jobs:
           submodules: recursive
           token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
 
+      - name: Setup rust toolchain for concrete-cpu
+        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
+
       - name: Create build dir
         run: mkdir build
 
@@ -83,6 +86,7 @@ jobs:
             ${{ env.DOCKER_GPU_OPTION }}
           shell: bash
           run: |
+            rustup toolchain install nightly-2024-01-31
             set -e
             cd /concrete/compilers/concrete-compiler/compiler
             rm -rf /build/*
@@ -136,6 +140,7 @@ jobs:
           shell: bash
           run: |
             set -e
+            rustup toolchain install nightly-2024-01-31
             cd /concrete/compilers/concrete-compiler/compiler
             pip install pytest
             dnf install -y libzstd libzstd-devel
