--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -98,6 +98,7 @@ jobs:
           shell: bash
           run: |
             set -e
+            rustup toolchain install nightly-2024-01-31
             rm -rf /build/*
             
             export PYTHON=${{ format('python{0}', matrix.python-version) }}
@@ -192,11 +193,8 @@ jobs:
         run: |
           brew install ninja ccache graphviz
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
+      - name: Setup rust toolchain for concrete-cpu
+        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
 
       - name: Set release version (nightly)
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
