fix(compiler): fix double free on aliased outputs

--- a/compilers/concrete-compiler/compiler/tests/end_to_end_fixture/tests_cpu/end_to_end_fhe.yaml
+++ b/compilers/concrete-compiler/compiler/tests/end_to_end_fixture/tests_cpu/end_to_end_fhe.yaml
@@ -1382,3 +1382,17 @@ tests:
     - scalar: 1
     outputs:
     - scalar: 1
+---
+description: return_aliasing
+program: |
+  func.func @main(%arg0: !FHE.eint<3>) -> (!FHE.eint<3>, !FHE.eint<3>) {
+    %1 = "FHE.add_eint"(%arg0, %arg0) : (!FHE.eint<3>, !FHE.eint<3>) -> !FHE.eint<3>
+    return %1, %1: !FHE.eint<3>, !FHE.eint<3>
+  }
+tests:
+  - inputs:
+    - scalar: 3
+    outputs:
+    - scalar: 6
+    - scalar: 6
+
