feat(compiler): Add dialect with operations related to the optimizer
This adds a new dialect called `Optimizer` with operations related to
the Concrete Optimizer. Currently, there is only one operation
`optimizer.partition_frontier` that can be inserted between a producer
and a consumer which belong to different partitions computed by the
optimizer. The purpose of this operation is to preserve explicit key
changes from the invocation of the optimizer on high-level dialects
(i.e., FHELinalg / FHE) until the IR is provided with actual
references to keys in low-level dialects (i.e., TFHE).

--- a/compilers/concrete-compiler/compiler/include/concretelang/Dialect/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/include/concretelang/Dialect/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(RT)
 add_subdirectory(SDFG)
 add_subdirectory(Tracing)
 add_subdirectory(TypeInference)
+add_subdirectory(Optimizer)
