--- a/compilers/concrete-compiler/compiler/lib/Dialect/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Dialect/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(RT)
 add_subdirectory(SDFG)
 add_subdirectory(Tracing)
 add_subdirectory(TypeInference)
+add_subdirectory(Optimizer)
