--- a/compilers/concrete-compiler/compiler/src/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/src/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries(
           TFHEDialect
           FHEDialect
           SDFGDialect
+          OptimizerDialect
           ConcretelangSupport
           ConcretelangTransforms
           MLIRIR
